[workspace]
default-members = ["connectorx"]
members = ["connectorx", "connectorx-cpp"]
resolver = "2"

[profile.release]
debug = true
lto = true

[workspace.dependencies]
arrow = { git="https://github.com/Nekit2217/arrow-rs", branch="bm-master", features = ["prettyprint", "ffi"]}
arrow2 = { version = "0.17", default-features = false }
